minor clean up bumped version number
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2435 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/AdVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdVastDoubleClickCompanion.qunit.html
@@ -34,7 +34,7 @@ function jsKalturaPlayerTest( videoId ){
 				// Else loop: 
 				setTimeout( waitForCompanions, 100 );
 			}
-			// give the player a attribute sync cyle ( happens every 250ms )
+			// give the player time for attribute sync cyle ( happens every 250ms )
 			setTimeout( waitForCompanions, 300 );
 		});
 	});
