--- a/modules/KalturaSupport/tests/AdVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdVastDoubleClickCompanion.qunit.html
@@ -46,6 +46,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> VAST DoubleClick Ad and Companion </h2>
+<a href="http://ad.doubleclick.net/pfadx/AngelaSite;kw=html5linearnonlinear;sz=300x300;ord=5036130;dcmt=text/xml">DoubleClick VAST</a> <br/>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <div id="testLongCompanion" style="width:728px;height:90px;;border:solid thin black;padding:5px;margin:5px;"> ( long companion target )</div>
