more verbose stubs for freeWheel support ( still not fully working ) adds transport for companions
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2444 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/AdFreeWheel.html
+++ b/modules/KalturaSupport/tests/AdFreeWheel.html
@@ -59,24 +59,43 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> FreeWheel Ad and Companion </h2>
-<span id="300x250slot" class="_fwph">
-	<form id="_fw_form_300x250slot" style="display:none">
-		<input type="hidden" name="_fw_input_300x250slot" id="_fw_input_300x250slot" value="w=300&h=250&envp=g_js&sflg=-nrpl;">
-	</form>
-	<span id="_fw_container_300x250slot" class="_fwac"></span>
-</span>
-<span id="728x90slot" class="_fwph">
-	<form id="_fw_form_728x90slot" style="display:none">
-		<input type="hidden" name="_fw_input_728x90slot" id="_fw_input_728x90slot" value="w=728&h=90&envp=g_js&sflg=-nrpl;">
-	</form>
-	<span id="_fw_container_728x90slot" class="_fwac"></span>
-</span>
-<span id="88x31slot" class="_fwph">
-	<form id="_fw_form_88x31slot" style="display:none">
-		<input type="hidden" name="_fw_input_88x31slot" id="_fw_input_88x31slot" value="w=88&h=31&envp=g_js&sflg=-nrpl;">
-	</form>
-	<span id="_fw_container_88x31slot" class="_fwac"></span>
-</span> 
+<table border='1' cellpadding='1'>
+		<tr><th>COMPANION SLOTS</th></tr>
+		<tr>
+			<td>
+			    <span id="VPNT_1" class="_fwph" >
+			        <form id="_fw_form_VPNT_1" style="display:none">
+			            <input type="hidden" name="_fw_input_VPNT_1" id="_fw_input_VPNT_1" value="ptgt=p&h=90&w=728&cd=216,30">
+			        </form>
+			        <span id="_fw_container_VPNT_1">COMPANION_SLOT_1</span>
+			    </span>
+			</td>
+		</tr>
+		<tr>
+			<td>
+			    <span id="SSNT_1" class="_fwph" >
+			        <form id="_fw_form_SSNT_1" style="display:none">
+			            <input type="hidden" name="_fw_input_SSNT_1" id="_fw_input_SSNT_1" value="w=300&h=250">
+			        </form>
+			        <span id="_fw_container_SSNT_1">COMPANION_SLOT_2</span>
+			    </span>
+			</td>
+		</tr>
+	</table>
+	<br>
+	<table border='1' cellpadding='1'>
+		<tr><th>STAND ALONE DISPLAY SLOTS</th></tr>
+		<tr>
+			<td>
+			    <span id="SSNT_2" class="_fwph" >
+			        <form id="_fw_form_SSNT_2" style="display:none">
+			            <input type="hidden" name="_fw_input_SSNT_2" id="_fw_input_SSNT_2" value="ptgt=p&h=90&w=728&cd=216,30&flag=-cmpn">
+			        </form>
+			        <span id="_fw_container_SSNT_2">DISPLAY_SLOT_1</span>
+			    </span>
+			</td>
+		</tr>
+	</table>
 
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br></br>
@@ -92,12 +111,12 @@ function jsKalturaPlayerTest( videoId ){
 	xmlns:dc="http://purl.org/dc/terms/" 
 	xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
 	rel="media:video" 
-	resource="http://www.kaltura.com/index.php/kwidget/cache_st/13121489/wid/_243342/uiconf_id/5357341/entry_id/0_uka1msg4" 
-	data="http://www.kaltura.com/index.php/kwidget/cache_st/13121489/wid/_243342/uiconf_id/5357341/entry_id/0_uka1msg4">
+	resource="http://www.kaltura.com/index.php/kwidget/cache_st/131214899/wid/_243342/uiconf_id/5357341/entry_id/0_uka1msg4" 
+	data="http://www.kaltura.com/index.php/kwidget/cache_st/131214899/wid/_243342/uiconf_id/5357341/entry_id/0_uka1msg4">
 		<param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" />
 		<param name="flashVars" value="&" />
-		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1312148943/wid/_243342/uiconf_id/5316052/entry_id/0_uka1msg4" />
+		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/13121489439/wid/_243342/uiconf_id/5316052/entry_id/0_uka1msg4" />
 </object>
 </body>
 </html>
