--- a/modules/KalturaSupport/tests/PPT_Widget.html
+++ b/modules/KalturaSupport/tests/PPT_Widget.html
@@ -1,6 +1,9 @@
 <html>
   <head>
 	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+	<script type="text/javascript">
+		mw.setConfig('Kaltura.UseAppleAdaptive', true );
+	</script>
     <title>
       PPT Widget
     </title>
