--- a/modules/KalturaSupport/tests/PPT_Widget.html
+++ b/modules/KalturaSupport/tests/PPT_Widget.html
@@ -2,7 +2,7 @@
   <head>
 	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 	<script type="text/javascript">
-		mw.setConfig('Kaltura.UseAppleAdaptive', true );
+		mw.setConfig('Kaltura.UseAppleAdaptive', false );
 	</script>
     <title>
       PPT Widget
