improved playlist fullscreen support renamed playlistSetList to more consistent class name playlist-set-list
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2623 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PlaylistKalturaApi.qunit.html
+++ b/modules/KalturaSupport/tests/PlaylistKalturaApi.qunit.html
@@ -20,7 +20,7 @@ function jsKalturaPlayerTest( videoId ){
 		kalturaQunitWaitForPlayer(function(){
 			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
 			ok( $iframe.find('.play-btn').length, ".play-btn found" );
-			equal( $iframe.find('.playlistSetList').find('a').length, 2, 'found two playlists');
+			equal( $iframe.find('.playlist-set-list').find('a').length, 2, 'found two playlists');
 			start();
 		});
 	});
