--- a/modules/DoubleClickIMA/tests/DoubleClickIMAPlayer.html
+++ b/modules/DoubleClickIMA/tests/DoubleClickIMAPlayer.html
@@ -36,7 +36,7 @@ function jsKalturaPlayerTest( videoId ){
 }
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
-<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+<script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
 <h2> DoubleClickIMA Player test </h2>
