fixed player size change on changeMedia
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2639 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/ChangeMediaEntry.qunit.html
+++ b/modules/KalturaSupport/tests/ChangeMediaEntry.qunit.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>K MIX Entry with no sources</title>
+<title>Change media with no sources</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
@@ -46,7 +46,7 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> Mix Test </h2>
+<h2> Change media player </h2>
 <h3> Load Kaltura Mix entry and use changeMedia API to load different entry </h3>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
 <br />
