removed old MobileAdTimeline ref setup adTimeline bindings with "KalturaSupport_DoneWithUiConf" binding for loader based dependencies. added AdTimeline / AdSupport to DoubleClick dependency fixed DoubleClick player bindings added adTimeline as FreeWheel dependency switched to "parseXML" $uiConf attribute ( more correct than parsing as html ) cleaned up adSupport callback flow added start stop ad bindings for watermark ( so that is not shown on-top of ads )
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2648 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/AdSupport/tests/Ad_Events_test.html
+++ b/modules/AdSupport/tests/Ad_Events_test.html
@@ -71,7 +71,7 @@
 			
 
 			// Alternativly to the monitorEvent you can use the mobileAdTimeline helper 
-			// See structure of ad JSON in mw.MobileAdTimeline 
+			// See structure of ad JSON in mw.AdTimeline 
 			mw.load( "mw.AdTimeline", function(){
 		
 				var updateRoll = function( type, $input ){
