--- a/modules/DoubleClick/tests/DoubleClickPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickPlayer.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>DoubleClickIMA Player test</title>
+<title>DoubleClick Player test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">	
@@ -39,7 +39,7 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> DoubleClickIMA Player test </h2>
+<h2> DoubleClick Player test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player_1316310055" 
@@ -53,14 +53,14 @@ function jsKalturaPlayerTest( videoId ){
 	xmlns:dc="http://purl.org/dc/terms/" 
 	xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
 	rel="media:video" 
-	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1316310055/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4" 
-	data="http://www.kaltura.com/index.php/kwidget/cache_st/1316310055/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4">
+	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4" 
+	data="http://www.kaltura.com/index.php/kwidget/cache_st/1/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4">
 		<param name="allowFullScreen" value="true" />
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
 		<param name="flashVars" value="&" />
-		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1316310055/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4" />
+		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4" />
 </object>
 	
 </body>
