* Finished the mapping for comscore plugin * Fixed passing flashvars to the iframe
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2652 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Comscore/tests/Comscore.html
+++ b/modules/Comscore/tests/Comscore.html
@@ -18,7 +18,7 @@
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
-		<param name="flashVars" value="&" />
+		<param name="flashVars" value="&comscoreC4=XXXXXXX" />
 		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1316013833/wid/_423851/uiconf_id/5743351/entry_id/1_jj2kc342" />
 	</object>
 
