more clear description of player
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2672 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/KdpApi.html
+++ b/modules/KalturaSupport/tests/KdpApi.html
@@ -132,7 +132,7 @@
 	<div id="container">
 		<h1 class="title">Kaltura Dynamic Player version 3 ( HTML5lib backend test ) </h1>
 		Choose player type: <a href="?" title="Normal KDP">Normal KDP</a> |
-		<a href="?forceMobileHTML5" title="Switch the KDP to HTML5 Player">HTML5 Player</a> |
+		<a href="?forceMobileHTML5" title="Force HTML5 Player">HTML5 Player</a> |
 
 		<div id="playerContainer"> 
 			<div id="kdp3" style="width:400px;height:330px;"></div>
