handle unknown ad types from freewheel some tweaks to smplePHPProxy to better handle kaltura captions
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2696 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/DoubleClick/tests/DoubleClickPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickPlayer.html
@@ -7,13 +7,13 @@
 function jsKalturaPlayerTest( videoId ){
 	
 	// Name this module
-	module( "Basic Player" );
+	module( "DoubleClick Player" );
 
-	var $iframe = $('#' + videoId + '_ifp').contents();
+	var $iframe = $( '#' + videoId + '_ifp' ).contents();
 	var iframeContext = window.frames['kaltura_player_ifp'];
 	
 	test( "Iframe in DOM", function() {
-		ok( $('#' + videoId + '_ifp').length , 'iframe found' );
+		ok( $( '#' + videoId + '_ifp' ).length , 'iframe found' );
 		equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
 	});
 
