--- a/modules/KalturaSupport/tests/CaptionsKalturaApi.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsKalturaApi.qunit.html
@@ -7,13 +7,37 @@
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
+<script type="text/javascript">
+	
+	function jsCallbackReady( playerId ) {
+		window.kdp = $('#' + playerId).get(0);
+		kdp.addJsListener('ccDataLoaded', "ccLoaded");
+		kdp.addJsListener('newClosedCaptionsData', "newCCData");
+		kdp.addJsListener('changedClosedCaptions', "ccChanged");
+	}
+
+	function writeLog(msg) {
+		$('#log').append(msg + '<br />');
+	}
+	function ccLoaded() {
+		writeLog('All captions has been loaded.');
+	}
+	function newCCData() {
+		writeLog('A caption asset had been loaded.');
+	}
+	function ccChanged() {
+		writeLog('Caption asset as been changed.');
+	}
+
+</script>
 <body>
 <h2> Captions for kdp flash player and html5 player </h2>
 <a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br /><br />
 
 <div style="float:left">
-<object id="kaltura_player_1316938683" name="kaltura_player_1316938683" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1316938683/wid/_423851/uiconf_id/5843251/entry_id/1_71dhcu80" data="http://www.kaltura.com/index.php/kwidget/cache_st/1316938683/wid/_423851/uiconf_id/5843251/entry_id/1_71dhcu80"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1316938683/wid/_423851/uiconf_id/5843251/entry_id/1_71dhcu80" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnsecakmi.kaltura.com/p/423851/sp/42385100/thumbnail/entry_id/1_71dhcu80/width/120/height/90/bgcolor/000000/type/2"></a> <span property="dc:description" content=""></span><span property="media:title" content="The Dark Knight Rises - Official Teaser Trailer [HD].mp4"></span> <span property="media:width" content="400"></span><span property="media:height" content="330"></span> <span property="media:type" content="application/x-shockwave-flash"></span> </object>
+<object id="kaltura_player_1316938683" name="kaltura_player_1316938683" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1316938683/wid/_423851/uiconf_id/5843251/entry_id/1_71dhcu80" data="http://www.kaltura.com/index.php/kwidget/cache_st/1316938683/wid/_423851/uiconf_id/5843251/entry_id/1_71dhcu80"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&externalInterfaceDisabled=false" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1316938683/wid/_423851/uiconf_id/5843251/entry_id/1_71dhcu80" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnsecakmi.kaltura.com/p/423851/sp/42385100/thumbnail/entry_id/1_71dhcu80/width/120/height/90/bgcolor/000000/type/2"></a> <span property="dc:description" content=""></span><span property="media:title" content="The Dark Knight Rises - Official Teaser Trailer [HD].mp4"></span> <span property="media:width" content="400"></span><span property="media:height" content="330"></span> <span property="media:type" content="application/x-shockwave-flash"></span> </object><br />
+<div id="log"><h3>Logs</h3></div>
 </div>
 
 </body>
