--- a/modules/KalturaSupport/tests/PageDomainIframePlayer.html
+++ b/modules/KalturaSupport/tests/PageDomainIframePlayer.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Page Domain Iframe Player Test</title>
-<!-- <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>  -->
+<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script> 
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.PageDomainIframe', true );
@@ -10,10 +10,6 @@
 </script>
 <script type="text/javascript">
 
-function jsCallbackReady(){
-	alert("jsCallbackReady");
-}
-/*
 function jsKalturaPlayerTest( videoId ){
 	// Name this module
 	module( "Page Domain Iframe Player" );
@@ -42,10 +38,9 @@ function jsKalturaPlayerTest( videoId ){
 		start();
 	});
 }
-*/
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
-<!-- <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>  -->
+<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script> 
 </head>
 <body>
 <h2> Page Domain Iframe Player Test </h2>
