--- a/modules/Comscore/tests/Comscore.html
+++ b/modules/Comscore/tests/Comscore.html
@@ -13,14 +13,14 @@
     </h1><a href="?forceMobileHTML5">Force Mobile HTML5</a> for testing with desktop html5 browsers<br>
     <br>
 
-	<object id="kaltura_player_1316013833" name="kaltura_player_1316013833" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1316013833/wid/_423851/uiconf_id/5743351/entry_id/1_jj2kc342">
+	<object id="kaltura_player_1317639236" name="kaltura_player_1317639236" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1317639236/wid/_423851/uiconf_id/5743351/entry_id/1_sfrj36g3" data="http://www.kaltura.com/index.php/kwidget/cache_st/1317639236/wid/_423851/uiconf_id/5743351/entry_id/1_sfrj36g3">
 		<param name="allowFullScreen" value="true" />
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
 		<param name="flashVars" value="&comscoreC4=XXXXXXX" />
-		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1316013833/wid/_423851/uiconf_id/5743351/entry_id/1_jj2kc342" />
-	</object>
+		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1317639236/wid/_423851/uiconf_id/5743351/entry_id/1_sfrj36g3" />
+	</object>	
 
   </body>
 </html>
