--- a/modules/KalturaSupport/tests/EmbedFlashembed.html
+++ b/modules/KalturaSupport/tests/EmbedFlashembed.html
@@ -1,5 +1,4 @@
-<!-- HTMML syntax conforms to HTML5.  If you use a different doctype and care about validation, take note. -->
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en">
 	<head>
 		<title>Kaltura Recipe:  best-practice JavaScript-based KDP embedding</title>
