moved iframe api code to a new  kdpPageJs  folder folder includes kdp javascript that runs on page base checkUserAgentPlayerRules js commited minor clean up to conviva and double click
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2842 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/DoubleClick/tests/DoubleClickPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickPlayer.html
@@ -5,7 +5,6 @@
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">	
 function jsKalturaPlayerTest( videoId ){
-	
 	// Name this module
 	module( "DoubleClick Player" );
 
@@ -40,6 +39,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> DoubleClick Player test </h2>
+Should display overlay at 5 seconds and midroll at 13 seconds. <br></br>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player_1316310055" 
