remaped all mwEmbedLoader.php calls to include debug param ( needed now that we minify the loader ) fixed flashvar config proxy on the playerProxy side of the iframe added entry point for javascript services
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2865 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/ChangeMediaEntry.qunit.html
+++ b/modules/KalturaSupport/tests/ChangeMediaEntry.qunit.html
@@ -4,7 +4,7 @@
 <title>Change media with no sources</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script>
 window['jsCallbackReady'] = function( videoId ){
 	// add a local ref to the kdp: 
