--- a/modules/KalturaSupport/tests/CustomvarResources.html
+++ b/modules/KalturaSupport/tests/CustomvarResources.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>KMC based configuration</title>
-<script type="text/javascript" src="../../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../../mwEmbedLoader.php?debug=true"></script>
 </head>
 <body>
 <h2> KMC based configuration</h2>
