--- a/modules/KalturaSupport/tests/EmbedSWFObject.2.2.html
+++ b/modules/KalturaSupport/tests/EmbedSWFObject.2.2.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>  
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>  
 </head>
 <body>
 <h2>Fall forward from Flash to html5</h2>
