--- a/modules/KalturaSupport/tests/KdpApi.html
+++ b/modules/KalturaSupport/tests/KdpApi.html
@@ -4,7 +4,7 @@
 		<title>MediaSpace API Test</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 		<style type="text/css">
 		html, body { margin:0; padding:0; }
 		body, td, th, pre, code, select, option, input, textarea { font-family:"Trebuchet MS", Arial, Sans-serif; font-size:10pt; }
