--- a/modules/Comscore/tests/Comscore.html
+++ b/modules/Comscore/tests/Comscore.html
@@ -4,7 +4,7 @@
     <title>
       Comscore Plugin
     </title>
-	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+	<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 	<script>mw.setConfig('Kaltura.NoApiCache', true);</script>
   </head>
   <body>
