--- a/modules/DoubleClick/tests/DoubleClickPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickPlayer.html
@@ -2,7 +2,7 @@
 <head>
 <title>DoubleClick Player test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
 function jsKalturaPlayerTest( videoId ){
 	// Name this module
