--- a/modules/KalturaSupport/tests/AdFreeWheel.html
+++ b/modules/KalturaSupport/tests/AdFreeWheel.html
@@ -3,7 +3,7 @@
 <head>
 <title>FreeWheel Ad and Companion </title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript"> 
 
 function fw_config() {
