--- a/modules/KalturaSupport/tests/BumperAdTest.html
+++ b/modules/KalturaSupport/tests/BumperAdTest.html
@@ -3,7 +3,7 @@
 <head>
 <title>Bumper Video</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );
 	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
