--- a/modules/KalturaSupport/tests/BumperVideoNoAdd.html
+++ b/modules/KalturaSupport/tests/BumperVideoNoAdd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 		<title>Bumper Only + URL</title>
 	</head>
 	<body>
