--- a/modules/KalturaSupport/tests/CustomJQueryUiSkin.html
+++ b/modules/KalturaSupport/tests/CustomJQueryUiSkin.html
@@ -3,7 +3,7 @@
 <head>
 <title>Custom player skin</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script  type="text/javascript" >
 function getParam( name )
 {
