--- a/modules/KalturaSupport/tests/CustomMetaData.html
+++ b/modules/KalturaSupport/tests/CustomMetaData.html
@@ -3,7 +3,7 @@
 <head>
 <title>Custom Meta data</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 
 <script type="text/javascript">		
 	function jsCallbackReady( playerId ){
