--- a/modules/KalturaSupport/tests/DynamicKEntryId.qunit.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.qunit.html
@@ -4,7 +4,7 @@
         <title>Player with native controls</title>
 	<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
         
-    <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+    <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">
 mw.ready( function(){
 	$j('#showVideo').attr('disabled', false);
