--- a/modules/KalturaSupport/tests/HoveringControl.html
+++ b/modules/KalturaSupport/tests/HoveringControl.html
@@ -3,7 +3,7 @@
 <head>
 <title>Hovering Contoller Test</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 
 </head>
 <body>
