--- a/modules/KalturaSupport/tests/MediaSpaceApi.html
+++ b/modules/KalturaSupport/tests/MediaSpaceApi.html
@@ -4,7 +4,7 @@
 		<title>MediaSpace API Test</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 		<script type="text/javascript">
 		// Disable default Iframe Rewrite and use Video tag rewrite
 		if( document.URL.indexOf('forceMobileHTML5' ) !== -1 ){
