--- a/modules/KalturaSupport/tests/PPT_Widget.html
+++ b/modules/KalturaSupport/tests/PPT_Widget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+	<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 	<script type="text/javascript">
 		mw.setConfig('Kaltura.UseAppleAdaptive', false );
 	</script>
