--- a/modules/KalturaSupport/tests/PlaylistPlugins.html
+++ b/modules/KalturaSupport/tests/PlaylistPlugins.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+	<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 	<script>mw.setConfig('Kaltura.NoApiCache', true);</script>
     <title>
       Playlist Plugins
