--- a/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
+++ b/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
@@ -14,7 +14,7 @@ jQuery.noConflict();
 <!-- Now include testing system -->
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <!-- Kaltura mwEmbed loader -->
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php -->
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
