--- a/modules/KalturaSupport/tests/RestrictUserAgent.html
+++ b/modules/KalturaSupport/tests/RestrictUserAgent.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>User Agent Restriction</title>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 </head>
 <body>
 <h2>User Agent Restriction</h2>
