--- a/modules/KalturaSupport/tests/WatermarkTest.html
+++ b/modules/KalturaSupport/tests/WatermarkTest.html
@@ -3,7 +3,7 @@
 <head>
 <title>Fall forward html5</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 
 </head>
 <body>
