--- a/modules/KalturaSupport/tests/https.html
+++ b/modules/KalturaSupport/tests/https.html
@@ -11,7 +11,7 @@
     </h1><a href="?forceMobileHTML5">Force Mobile HTML5</a> for testing with desktop html5 browsers<br>
     <br>
 
-<script type="text/javascript" src="https://www.kaltura.com/html5/html5lib/v1.4a8/mwEmbedLoader.php"></script>
+<script type="text/javascript" src="https://www.kaltura.com/html5/html5lib/v1.4a8/mwEmbedLoader.php?debug=true"></script>
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash"
 				    allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400"
 				    xmlns:dc="http://purl.org/dc/terms/"
