--- a/modules/KalturaSupport/tests/iPadNativeControls.html
+++ b/modules/KalturaSupport/tests/iPadNativeControls.html
@@ -3,7 +3,7 @@
 <head>
 <title>iPad Native controls</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 
 <script type="text/javascript">
 	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', false);
