updated change media target entry id
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2884 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/KdpApi.html
+++ b/modules/KalturaSupport/tests/KdpApi.html
@@ -87,7 +87,7 @@
 
 		$(function() {
 			$('#changeMedia').click( function() {
-				$('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_uida6ix6"});
+				$('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_v1z55w0b"});
 			});
 
 			$('#clearMedia').click( function() {
