--- a/modules/KalturaSupport/tests/EmptyPlayer.html
+++ b/modules/KalturaSupport/tests/EmptyPlayer.html
@@ -1,24 +1,46 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-	<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
-    <title>
-      Empty Player
-    </title>
-  </head>
-  <body>
-    <h1>
-      Empty Player
-    </h1><a href="?forceMobileHTML5">Force Mobile HTML5</a> for testing with desktop html5 browsers<br>
-    <br>
-	<div id="player_wrap">
-		<object id="kaltura_player_714526845" name="kaltura_player_714526845" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1312787305/wid/_423851/uiconf_id/5349042/" data="http://www.kaltura.com/index.php/kwidget/cache_st/1312787305/wid/_423851/uiconf_id/5349042/">
-			<param name="allowFullScreen" value="true" />
-			<param name="allowNetworking" value="all" />
-			<param name="allowScriptAccess" value="always" />
-			<param name="bgcolor" value="#000000" />
-			<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1312787305/wid/_423851/uiconf_id/5349042/" />
-		</object>
-	</div>
-  </body>
+<head>
+<title>Empty Player test</title>
+<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
+<script type="text/javascript">	
+function jsKalturaPlayerTest( videoId ){
+	
+	// Name this module
+	module( "Empty Player" );
+
+	var $iframe = $('#' + videoId + '_ifp').contents();
+	var iframeContext = window.frames['kaltura_player_ifp'];
+	
+	test( "Iframe in DOM", function() {
+		ok( $('#' + videoId + '_ifp').length , 'iframe found' );
+		equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
+	});
+	// listen for the empty kdp event: 
+	asyncTest("empty kdp event", function(){
+		
+	});
+}
+</script>
+<!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
+<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+</head>
+<body>
+<h2> Empty Player test </h2>
+<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<br />
+<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
+allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
+xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
+resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" 
+data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4">
+	<param name="allowFullScreen" value="true" />
+	<param name="allowNetworking" value="all" />
+	<param name="allowScriptAccess" value="always" />
+	<param name="bgcolor" value="#000000" />
+	<param name="flashVars" value="&" />
+	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" />
+</object>
+</body>
 </html>
