--- a/modules/KalturaSupport/tests/ExternalResources.qunit.html
+++ b/modules/KalturaSupport/tests/ExternalResources.qunit.html
@@ -41,19 +41,19 @@ function jsKalturaPlayerTest( videoId ){
 <h2> External Resources test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
-<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
-allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
-xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/5902462/entry_id/0_uka1msg4" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/5902462/entry_id/0_uka1msg4">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/5902462/entry_id/0_uka1msg4" />
-</object>
+<h3>OnPage resources</h3>
+<ul>
+	<li><a href="externalResources/onPageCss1_fooBarPlugin.css">onPageCss1_fooBar.css</a> -- <span class="fooBar">sets this to red</span></li>
+	<li><a href="externalResources/onPageJs1_fooBarPlugin.js">onPageJs1_fooBarPlugin.js</a> -- console logs player ready event and update this span: <span id="testPluginTarget">update me</span></li>
+</ul>
+<h3>Iframe HTML5 player resources</h3>
+<ul>
+	<li><a href="externalResources/IframeCustomPluginJs1.js">IframeCustomPluginJs1</a> -- shows that the resource is loaded early on and can do normal plugin "loader" bindings</li>
+    <li><a href="externalResources/IframeCustomPluginJs2.js">IframeCustomPluginJs2</a> -- just a console log showing multiple plugins </li>
+    <li><a href="externalResources/IframeCustomPluginCss1.css">IframeCustomPluginCss1</a> -- custom css file ( changes play button to a flower )</li>
+</ul>
 
+<object id="kaltura_player_1318418782" name="kaltura_player_1318418782" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1318418782/wid/_243342/uiconf_id/5994862/entry_id/0_uka1msg4" data="http://www.kaltura.com/index.php/kwidget/cache_st/1318418782/wid/_243342/uiconf_id/5994862/entry_id/0_uka1msg4"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1318418782/wid/_243342/uiconf_id/5994862/entry_id/0_uka1msg4" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2"></a> <span property="dc:description" content="test folgers coffe"></span><span property="media:title" content="FolgersCoffe.mpeg"></span> <span property="media:width" content="400"></span><span property="media:height" content="330"></span> <span property="media:type" content="application/x-shockwave-flash"></span> </object>
 
 </body>
 <!--  UiConf file used in this example: 
@@ -61,7 +61,13 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/u
 <layout id="full" name="Custom Resource Includes Test" skinPath="/content/uiconf/kaltura/kmc/appstudio/kdp3/eagle/skin/v3.5.9/skin.swf">
   <HBox id="topLevel" width="100%" height="100%">
     <VBox id="player" width="100%" height="100%" styleName="black">
-      <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
+    
+      <Plugin id="fooBar" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand" 
+      	onPageJs1="externalResources/onPageJs1_fooBarPlugin.js"
+      	onPageCss1="externalResources/onPageCss1_fooBarPlugin.css"
+      />
+    
+      <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand" />
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       <Canvas id="PlayerHolder" height="100%" width="100%" styleName="black">
         <Video id="video" width="100%" height="100%"/>
@@ -193,6 +199,11 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/u
     <var key="imageDefaultDuration" value="2"/>
     <var key="autoPlay" value="false"/>
     <var key="autoMute" value="false"/>
+    <var key="IframeCustomPluginJs1" value="externalResources/IframeCustomPluginJs1.js" />
+    <var key="IframeCustomPluginJs2" value="externalResources/IframeCustomPluginJs2.js" />
+    <var key="IframeCustomPluginCss1" value="externalResources/IframeCustomPluginCss1.css" />
+    <var key="onPageJs1" value="externalResources/onPageJs1.js" />
+  	<var key="onPageCss1" value="externalResources/onPageCss1.css" />
   </uiVars>
 </layout>
 
