switched "changedMedia" callback to playerReady since that is apparently what the kdp does. modifed KalturaKDPCallbackAlreadyCalled to accept videoIds for better support of restoring jsReadyCallback for multiple players
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2917 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PlaylistKalturaApi.qunit.html
+++ b/modules/KalturaSupport/tests/PlaylistKalturaApi.qunit.html
@@ -53,6 +53,21 @@ function jsKalturaPlayerTest( videoId ){
 </script>
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 
+<script type="text/javascript">	
+	function jsCallbackReady( videoId ){
+		var kdp = document.getElementById( videoId );
+		kdp.addJsListner( 'changeMedia', 'testFunc');
+		alert( 'added list');
+	}
+	window.testFunc = function(){
+		alert( 'cm');
+	}
+	test = {
+			'fish' : function(){
+				alert('change media');
+			}
+	}
+</script>
 </head>
 <body>
 <h2> Playlist Kaltura api </h2>
