added support for wgKalturaEnableEmbedUiConfJs to control if uiConfJS actions are invoked or not
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3043 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/UserAgentPlayerRules.qunit.html
+++ b/modules/KalturaSupport/tests/UserAgentPlayerRules.qunit.html
@@ -5,6 +5,9 @@
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
+//Enable uiconf js which includes player rules
+mw.setConfig('Kaltura.EnableEmbedUiConfJs', true);
+
 function jsKalturaPlayerTest( videoId ){
 	
 	// Name this module
