--- a/modules/KalturaSupport/tests/ExternalResources.qunit.html
+++ b/modules/KalturaSupport/tests/ExternalResources.qunit.html
@@ -12,6 +12,9 @@
 </script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
+// Enable uiconf js which includes external resources 
+mw.setConfig('Kaltura.EnableEmbedUiConfJs', true);
+
 function jsKalturaPlayerTest( videoId ){
 	
 	// Name this module
