Updated integration page text
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3075 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/IntegrationVastNielsen.html
+++ b/modules/KalturaSupport/tests/IntegrationVastNielsen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Integration FreeWheel Nielsen test</title>
+<title>Integration Vast Nielsen test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
@@ -38,7 +38,7 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> Integration FreeWheel Nielsen test </h2>
+<h2> Integration Vast Nielsen test</h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
