--- a/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
@@ -69,10 +69,11 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436448/wid/_243342/u
       	profileId="176538:KDP_Flash"
       	profileIdHTML5="176538:KDP_HTML5"
       	siteSectionId="defaultsection"
-      	videoAssetFallbackId="34800494"
       	preSequence="1"
       	postSequence="1"
-      	videoAssetId="34800494"
+      	
+      	videoAssetId="playerdefined"
+      	videoAssetFallbackId="playerdefined"
       />
       
       <Plugin id="NielsenPlugin" 
