fixed bootstrap path
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3084 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenPlugin/tests/IntegrationVastNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationVastNielsen.html
@@ -35,7 +35,7 @@ function jsKalturaPlayerTest( videoId ){
 }
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
-<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+<script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
 <h2> Integration Vast Nielsen test</h2>
